# flashcarding

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts
.conductor/: settings.toml
.context/mockups/: theme.css  tw-config.js
app/: globals.css  layout.tsx  manifest.ts
app/(app)/: layout.tsx
app/(app)/metrics/: page.tsx
app/(app)/new/: actions.ts  page.tsx
app/(auth)/: actions.ts
app/_pwa/: service-worker-registrar.tsx
components/: app-shell.tsx  logo.tsx
components/ui/: sonner.tsx
desktop/: README.md  main.js  package.json  preload.js
docs/: ANALYTICS.md  ARCHITECTURE.md  BUILD-PLAN.md  CARD-EDITING.md  CARD-QUALITY.md  DATA-CONTRACTS.md  DESIGN-REFINEMENT-TASKS.md  DESIGN.md  FUTURE-IDEAS.md  METRICS.md  PIPELINE.md  SCHEDULING.md  VISION.md  VISUAL-POLISH-AUDIT.md
lib/auth/: types.ts  username.ts
lib/feedback/: examples.ts  index.ts  metrics.ts  seed-examples.ts  select-examples.ts
lib/generation/: anthropic.ts  chunk.ts  gates.ts  generate.ts  process.ts  prompt.ts  selffix.ts  submit.ts  title.ts
lib/ingestion/: index.ts
lib/metrics/: config.ts  edit-rate.ts  graduation.ts  retention.ts  server.ts
lib/push/: reminders.ts  store.ts  types.ts  web-push.ts
lib/scheduling/: counts.ts  fsrs.ts  leech.ts
lib/supabase/: admin.ts  auth.ts  client.ts  cookies.ts  proxy.ts  server.ts
lib/types/: database.ts  domain.ts
public/: sw.js
public/mockups/: mobile-home.html  mobile-study.html  web-home-a.html
scripts/: cleanup-test-users.mjs  distill-rejects.ts  gen-icons.mjs  gen-vapid.mjs  seed-demo.ts  shot.mjs  smoke-gen.ts  smoke-ingest-generate.ts  smoke-ingest.ts  test-fsrs.ts  verify-feedback.ts  verify-push.ts  verify-ui.mjs  walk-integration.mjs  walk-pwa.mjs  walk-ui.mjs  walk-upload.mjs  walk.mjs
services/ingestion-py/: .dockerignore  .gitignore  Dockerfile  README.md  ingest.py  make_fixtures.py  prefetch_docling.py  pyproject.toml  railway.json  server.py
supabase/: config.toml
supabase/migrations/: 20260611094838_init_schema.sql  20260611120000_push_subscriptions.sql  20260612000000_analytics_schema.sql  20260612000000_study_reviews_interval.sql  20260613120000_card_learning_steps.sql
(+26 files in other folders)
